--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
+<!DOCTYPE html>
 <html>
   <head>
-
+    <title>o wow a website :3</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    o wow a website :3
+    <p>o wow a website :3</p>
+
+    <h2>Frens:</h2>
+    <a href="https://fawkes.io" target="_blank"><img src="assets/mtnash.png" class="img88x31"></a>
+    <a href="https://emmie.pet/" target="_blank"><img src="assets/emmie.png" class="img88x31"></a>
+    <a href="https://ari.foo/" target="_blank"><img src="assets/ari.png" class="img88x31"></a>
+    <a href="https://balam314.github.io/" target="_blank"><img src="assets/bala.jpg" class="img88x31"></a>
+    <p>also me :3</p>
+    <a href="https://selene.foo" target="_blank"><img src="assets/88x31.png" class="img88x31"></a>
   </body>
 </html>
